<!--
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">MatrixScan AR</string>
    <string name="try_these_features">Try These Features</string>
    <string name="button_return_title">Return</string>
    <string name="menu_highlights_title">Highlights</string>
    <string name="menu_highlights_subtitle">Visualize scanned codes</string>
    <string name="menu_annotations_title">Info Annotations</string>
    <string name="menu_annotations_subtitle">Show additional information</string>
    <string name="menu_popovers_title">Popovers</string>
    <string name="menu_popovers_subtitle">Take action on scanned codes</string>
    <string name="menu_status_icons_title">Status Icons</string>
    <string name="menu_status_icons_subtitle">Provide short information</string>
</resources>
